--- a/src/index.css
+++ b/src/index.css
@@ -1,91 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-.container{
-    background-color: whitesmoke;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+body {
+    font-family:"Montserrat", sans-serif;
     margin: 0;
     padding: 0;
-}
-
-input{
-    border: 1px solid rgb(212, 212, 212);
-    border-radius: 5px;
-    background-color: whitesmoke;
-    color: rgb(165, 165, 165);
-}
-
-.botaoComIcone{
-    background-color: rgb(62, 177, 62);
-    border: 1px, solid, rgb(212, 212, 212);
-    border-radius: 4px
-}
-
-.titulo{
+    background-color: #f5f7fa;
+    color: #333;
+  }
+  
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 30px 20px;
+  }
+  
+  .titulo {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  
+  .titulo h1 {
+    font-size: 2.5rem;
+    color: #25d366;
+    margin-bottom: 10px;
+  }
+  
+  .titulo p {
+    font-size: 1.1rem;
+    color: #555;
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  
+  .caixas {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-wrap: wrap;
+    gap: 110px;
     justify-content: center;
-}
-
-.caixas{
-    display: flex;
-    padding: 20px;
-    gap: 50px;
-}
-
-.box{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    height: 500px;
-    width: 300px;
-    background-color: rgb(255, 255, 255);
-    padding: 15px;
-    border: 1px solid rgb(212, 212, 212);
-    border-radius: 20px;
-}
-
-.linkGerado{
-    height: 150px;
-    width: 250px;
-    background-color: whitesmoke;
-    border: 1px solid rgb(212, 212, 212);
-    border-radius: 20px;
-}
-
-.copiarLink{
-    display: flex;
-    height: 50px;
-    width:200px ;
-}
-
-.link{
-    background-color: white;
-    border: 1px solid rgb(212, 212, 212);
-    border-radius: 5px;
-    width: 150px;
-}
-
-.box1{
-    display: flex;
-    gap: 70px;
-    height: 100px;
-    width: 300px;
-    
-}
-
-.nome{
-    width: 50px;
-}
-
-.numero{
-    width: 50px;
-}
-
-.contato{
-    display: flex;
-
-}
+  }
+  
+  /* Responsivo para telas menores */
+@media (max-width: 768px) {
+    .caixas {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .box {
+      width: 90%; /* Ocupa quase toda a largura da tela */
+      max-width: none;
+    }
+  }
