--- a/src/components/styles/Gerador.css
+++ b/src/components/styles/Gerador.css
@@ -24,7 +24,8 @@
   flex-direction: column;
 }
 
-input[type="text"] {
+.boxGrd input[type="text"] {
+  width: 90%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
