--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@ body {
     background-color: #f5f7fa;
     color: #333;
   }
+  .header{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+  
+  }
   
   .container {
     max-width: 1200px;
