--- a/src/components/styles/Agenda.css
+++ b/src/components/styles/Agenda.css
@@ -12,30 +12,17 @@
 }
 
 
-
-.header h1 {
-  color: var(--color-primary);
-  font-size: var(--font-size-subtitle);
-  margin-bottom: var(--spacing-large);
-}
-
 .box1 {
   display: flex;
-  width: 100%;
+  max-width: 100%;
+  gap: 8px;
 }
 
 .nome, .numero {
-  flex: 1;
   display: flex;
   flex-direction: column;
 }
 
-.nome input, .numero input {
-  padding: var(--spacing-base);
-  border: 1px solid var(--color-input-border);
-  border-radius: var(--border-radius);
-  max-width: 50%;
-}
 
 .botaoSalvar {
   width: 100%;
@@ -56,9 +43,6 @@
   gap: 8px;     
 }
 
-.botaoComIcone:hover {
-  background-color: var(--color-primary-dark);
-}
 
 .box2 {
   margin-top: var(--spacing-large);
