--- a/src/components/styles/Gerador.css
+++ b/src/components/styles/Gerador.css
@@ -11,19 +11,8 @@
   align-items: center;
 }
 
-
-.header h1 {
-  color: var(--color-primary);
-  font-size: var(--font-size-subtitle);
-  margin-bottom: var(--spacing-large);
-}
-
-textarea {
-  max-width: 95%;
-  min-width: 95%;
-  border-color: var(--color-input-border);
-  border-radius: var(--border-radius);
-  padding: var(--spacing-base);
+.gerador{
+ width: 100%;
 }
 
 .botaoComIcone {
@@ -67,6 +56,7 @@ textarea {
   word-break: break-all;
   flex: 1;
 }
+
 
 @media (max-width: 768px) {
   .boxGrd {
