--- a/src/components/styles/Agenda.css
+++ b/src/components/styles/Agenda.css
@@ -51,11 +51,35 @@
 
 .agenda {
   display: flex;
-  
   flex-direction: column;
   gap: 10px;
   max-height: 150px; /* limite para área dos contatos */
   overflow-y: auto; /* rolagem interna se ultrapassar */
+}
+
+/* Estilização da barra de rolagem para .agenda */
+.agenda::-webkit-scrollbar {
+  width: 8px; /* largura da barra de rolagem */
+}
+
+.agenda::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.05); /* cor do trilho/fundo */
+  border-radius: 10px;
+}
+
+.agenda::-webkit-scrollbar-thumb {
+  background: var(--color-primary); /* cor do "polegar" */
+  border-radius: 10px;
+}
+
+.agenda::-webkit-scrollbar-thumb:hover {
+  background: var(--color-primary-dark); /* cor ao passar o mouse */
+}
+
+/* Para Firefox */
+.agenda {
+  scrollbar-width: thin; /* 'thin' ou 'auto' */
+  scrollbar-color: var(--color-gray) rgba(0, 0, 0, 0.05); /* polegar e trilho */
 }
 
 .contato {
@@ -63,7 +87,8 @@
   padding: var(--spacing-base);
   border-radius: var(--border-radius);
   display: flex;
-  flex-direction: column;
+  gap: 15px;
+  align-items: center;
 }
 .contato p {
   color: var(--color-gray);
@@ -78,12 +103,12 @@
 .contato-buttons {
   display: flex;
   gap: 5px; /* espaço entre botões */
-  margin-top: 8px;
+  
 }
 
 .contato button {
-  padding: 5px 8px;
-  font-size: 0.9rem;
+  padding: 5px;
+  font-size: 0.8rem;
   background-color: var(--color-primary);
   color: white;
   border: none;
